@@ -34,7 +34,7 @@ En	De	Filename
 -	#	ch02dia6.png
 -	#	ch02dia7.png
 -	#	Checkout.png
--	#	Commit.png
+#	#	Commit.png
 -	#	CommitContextMenu.png
 -	#	CommitProgress.png
 .	.	ConflictIcon.png
@@ -66,7 +66,7 @@ En	De	Filename
 -	#	Relocate.png
 #	#	Repobrowser.png
 #	#	RepoStatus.png
--	#	Revert.png
+#	#	Revert.png
 -	#	SettingsColors.png
 -	#	SettingsGeneral.png
 -	#	SettingsMain.png
