@@ -5,6 +5,7 @@
 - ADD: It's possible to save the created patch directly to the
        clipboard. (Will Dean)
 - ADD: Column header for TortoiseBlame. (Stefan)
+- ADD: The status file list shows file/folder icons for each item. (Stefan)
 - CHG: The log message history is kept separately by repository. (Stefan)
 - CHG: The 'check for updates' dialog now is called
        'check for modifications' and doesn't contact the repository
@@ -15,7 +16,7 @@
        filehandling. Use the paths in the settings dialog
        instead. (Stefan)
 - CHG: The log message history isn't limited to 255 chars
-       for each entry. (Stefan)
+       for each entry anymore. (Stefan)
 - BUG: Explorer could crash when setting properties with
        illegal values. (Stefan)
 - BUG: After a merge dry-run, the wc URL wasn't shown
